# flathub-rebuilder

./: .gitignore  LICENSE  README.md  pyproject.toml
flatpak_rebuilder/: main.py
tests/: test_flatpak_rebuilder.py
